# incident-response-copilot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO.md
src/incident_response_copilot/: __init__.py  api.py  config.py  demo_data.py  main.py  models.py  repository.py
src/incident_response_copilot/web_assets/: app.js  index.html  styles.css
tests/: test_api.py  test_repository.py  test_web.py
