[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-response-copilot"
version = "0.1.0"
description = "Local-first incident response copilot for triage timelines, evidence, containment tasks, and reviewable playbooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["fastapi>=0.110.0", "pydantic>=2.6.0", "uvicorn[standard]>=0.27.0"]

[project.optional-dependencies]
dev = ["httpx>=0.27.0", "pytest>=8.0.0", "pytest-cov>=4.1.0", "ruff>=0.4.0"]

[project.scripts]
incident-response-copilot = "incident_response_copilot.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/incident_response_copilot"]
artifacts = ["src/incident_response_copilot/web_assets/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
